Fix horizontal scrollbar display

--- a/SamplesDashboard/SamplesDashboard/ClientApp/src/custom.css
+++ b/SamplesDashboard/SamplesDashboard/ClientApp/src/custom.css
@@ -24,6 +24,3 @@ td, th {
 .container {
     max-width: 100%
 }
-.ms-Viewport {
-    padding-right: 10px;
-}
